src/objects/PQ__c.object
<CustomObject>
    <description>Parliamentary Questions</description>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answerer__c</fullName>
        <label>Answerer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>EA_Campaign__c</referenceTo>
        <relationshipLabel>PQs</relationshipLabel>
        <relationshipName>PQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PQs</relationshipLabel>
        <relationshipName>PQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <label>Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Antipsychotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assisted dying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuts to local services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia statistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnosis – including GPs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dignity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elder abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic tagging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of life care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital care – for people with dementiaHousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human rights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NHS Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personalisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescriptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public involvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social care funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workforce training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PQ</label>
    <nameField>
        <displayFormat>PQ-{0}</displayFormat>
        <label>PQ ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PQs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>